# flomo-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  flomo-api-analysis.md  reverse-engineering-framework.md
flomo_cli/: __init__.py  __main__.py  auth.py  cli.py  client.py  constants.py  error_codes.py  exceptions.py  formatter.py  formatter_renderers.py  formatter_utils.py
flomo_cli/commands/: _common.py  auth.py  memo.py  tag.py
skills/flomo-cli/: SKILL.md
tests/: test_auth.py  test_client.py  test_commands.py  test_signing.py
